--- a/snippets/product-card-08.liquid
+++ b/snippets/product-card-08.liquid
@@ -175,7 +175,7 @@
                     </div>
                 {%- endif -%}
                
-                <h3 class="card__heading"><a class="card-title link-underline{% if settings.product_title_line_text != 'full' %} card-title-ellipsis{% endif %}{% if variant_selected != blank %} card-title-change{% endif %}" href="{{ product_card_product.url }}" data-product-title="{{ product_card_product.title | escape }}" data-product-url="{{ product_card_product.url }}">{{ product_card_product.title | escape }}
+                <h3 class="card__heading"><a class="card-title link-underline{% if settings.product_title_line_text != 'full' %} card-title-ellipsis{% endif %}{% if variant_selected != blank %} card-title-change{% endif %}" href="{{ product_card_product.url }}" data-product-title="{{ product_card_product.title | escape }}" data-product-url="{{ product_card_product.url }}">{{ product_card_product.title | escape }}{% render 'christmas-product-icon-inline', product: product_card_product %}
                         {%- if variant_selected != blank -%}
                             <span data-change-title> {% unless settings.quick_shop_type == '2' %}{% if settings.style_text_color_varriant == '01' %}-{% endif %} {{ variant_selected }}{% endunless %}</span>
                         {%- endif -%}
