--- a/sections/rich-text-video-product.liquid
+++ b/sections/rich-text-video-product.liquid
@@ -1,3 +1,4 @@
+{%- if product.metafields.custom.cor_de_fundo.value != blank -%}
 <link rel="stylesheet" href="{{ 'component-rte.css' | asset_url }}" media="print" onload="this.media='all'">
 <link rel="stylesheet" href="{{ 'component-rich-text.css' | asset_url }}" media="print" onload="this.media='all'">
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
@@ -246,6 +247,7 @@
   }
   homeMoreLess();
 </script>
+{%- endif -%}
 {% schema %}
 {
   "name": "Rich Text Video Product",
